# eth-credit-spread-hedge

./: .env.example  .gitignore  CHANGELOG.md  README.md  __init__.py  capture_market_data.py  dashboard_app.py  option_chain_app.py  pyproject.toml  run_demo.ps1  run_scenarios.py
Plans/: 00_MASTER_ROADMAP.md  01_BASELINE_AND_REPOSITORY_PLAN.md  02_OPTION_MODEL_AND_MARK_TO_MARKET_PLAN.md  03_MARKET_DATA_AND_INSTRUMENT_PLAN.md  04_BYBIT_DEMO_EXECUTION_PLAN.md  05_PERSISTENCE_RECONCILIATION_AND_RISK_PLAN.md  06_BACKTEST_FAULT_TESTING_AND_VALIDATION_PLAN.md  07_DEPLOYMENT_OPERATIONS_AND_ACCEPTANCE_PLAN.md  08_MASTER_CHECKLIST.md
artifacts/: runtime_composition.json
backtesting/: __init__.py  historical.py  market_path.py  monte_carlo.py
config/: full_strategy.toml
core/: __init__.py  credit_spread.py  crossing_engine.py  hedge_engine.py  ledger.py  virtual_levels.py
data/: __init__.py  bybit_options.py
docs/: BASELINE_SPEC.md  DEMO_BURN_IN_REVIEWS.md  INCIDENT_PLAYBOOKS.md  INTEGRATION_COMPONENT_MATRIX.md  KILL_SWITCHES.md  M0_MIGRATION.md  M11_REALISTIC_SIMULATION.md  M12_SHADOW_MODE.md  M1_DOMAIN_MIGRATION.md  M2_OPTION_POSITION.md  M3_MARKET_DATA.md  M5_PRIVATE_ADAPTER.md  OPERATIONS_OBSERVABILITY.md  OPERATOR_COMMANDS.md  PILOT_APPROVAL.md  RELEASE_PROCESS.md  ROLLBACK_PROCEDURE.md
tests/: __init__.py  test_accounting.py  test_backtesting.py  test_bybit_demo_config.py  test_bybit_options.py  test_capture_market_data.py  test_credit_spread.py  test_crossing_engine.py  test_dashboard.py  test_distributed_recovery.py  test_fault_injection.py  test_floor_policy.py  test_live_bybit.py  test_live_bybit_demo.py  test_live_bybit_demo_mutating.py  test_multi_level.py  test_operational_artifacts.py  test_package.py  test_recovery.py  test_scenarios.py  test_simulated_exchange.py  (+5 more)
(+269 files in other folders)
