[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-credit-spread-hedge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["matplotlib>=3.8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
markers = ["live: opt-in tests that contact a public exchange API"]
