[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-credit-spread-hedge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "python-dotenv>=1.2,<2",
    "websockets>=15,<16",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eth_credit_hedge = ["py.typed", "config/environments/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["live: opt-in tests that contact a public exchange API"]

[tool.ruff]
target-version = "py311"
extend-exclude = ["artifacts", "graphify-out"]

[tool.mypy]
python_version = "3.11"
strict = true
files = [
    "src/eth_credit_hedge/backtesting",
    "src/eth_credit_hedge/application",
    "src/eth_credit_hedge/config",
    "src/eth_credit_hedge/core",
    "src/eth_credit_hedge/data",
    "src/eth_credit_hedge/domain",
    "src/eth_credit_hedge/infrastructure/bybit",
    "src/eth_credit_hedge/infrastructure/monitoring",
    "src/eth_credit_hedge/infrastructure/persistence",
    "src/eth_credit_hedge/infrastructure/recording",
    "src/eth_credit_hedge/interfaces",
    "src/eth_credit_hedge/ports",
]
